<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/college_fragment"
        android:contentDescription="@string/imageDesc"
        android:icon="@drawable/menu_college_icon"
        android:title="@string/college" />

    <item
        android:id="@+id/private_fragment"
        android:contentDescription="@string/imageDesc"
        android:icon="@drawable/menu_lock_icon"
        android:title="@string/private_content" />

    <item
        android:id="@+id/home_fragment"
        android:contentDescription="@string/imageDesc"
        android:icon="@drawable/menu_home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/user_fragment"
        android:contentDescription="@string/imageDesc"
        android:icon="@drawable/menu_user_icon"
        android:title="@string/user"
        />

    <item
        android:id="@+id/settings_fragment"
        android:contentDescription="@string/imageDesc"
        android:icon="@drawable/menu_settings_icon"
        android:title="@string/settings" />

</menu>