<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/item_clge_bg"
    android:backgroundTint="#9D9D9D"
    android:padding="16dp">

    <!--    <androidx.cardview.widget.CardView-->
    <!--        android:id="@+id/event_imageView"-->
    <!--        android:layout_width="100dp"-->
    <!--        android:layout_height="100dp"-->
    <!--        app:cardCornerRadius="10dp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <ImageView
        android:id="@+id/event_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/item_background"
        android:contentDescription="@string/imageDesc"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    </androidx.cardview.widget.CardView>-->

    <TextView
        android:id="@+id/event_rightTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_htf_medium"
        android:padding="8dp"
        android:text="@string/college_feast_and_event_name_displays_here"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/event_imageView"
        app:layout_constraintTop_toTopOf="@+id/event_imageView" />

    <TextView
        android:id="@+id/event_bottomTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_htf_medium"
        android:padding="8dp"
        android:text="@string/college_name_and_address_displays_here"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/event_imageView"
        app:layout_constraintTop_toBottomOf="@+id/event_imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>
