<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--        <LinearLayout-->
            <!--            android:id="@+id/title"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:orientation="horizontal"-->
            <!--            android:padding="8dp"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintHorizontal_bias="0.0"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toTopOf="parent">-->

            <!--            <TextView-->
            <!--                android:id="@+id/textView"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_weight="1"-->
            <!--                android:fontFamily="@font/gotham_htf_title"-->
            <!--                android:text="Study Buddy"-->
            <!--                android:textColor="#000000"-->
            <!--                android:textSize="20sp" />-->

            <!--            <ImageView-->
            <!--                android:id="@+id/user_image"-->
            <!--                android:layout_width="40dp"-->
            <!--                android:layout_height="40dp"-->
            <!--                android:contentDescription="@string/imageDesc"-->
            <!--                android:src="@drawable/user_image" />-->

            <!--        </LinearLayout>-->

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/item_clge_bg"
                android:fontFamily="@font/gotham_htf_medium"
                android:padding="16dp"
                android:hint="@string/search_college"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_htf_medium"
                    android:padding="8dp"
                    android:text="@string/public_content"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/public_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    tools:itemCount="10"
                    tools:listitem="@layout/item_public_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_htf_medium"
                    android:padding="8dp"
                    android:text="@string/college_feats_and_events"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/event_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    tools:itemCount="10"
                    tools:listitem="@layout/item_college_events" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottomBar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        app:itemIconTint="@color/white"-->
<!--        app:itemTextColor="@color/white"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:menu="@menu/bottom_menu" />-->

</androidx.constraintlayout.widget.ConstraintLayout>

